--- a/index.html
+++ b/index.html
@@ -103,8 +103,10 @@
 
 
 <div class="container">
-<ul class="nav nav-tabs noprint">
+<button class="btn btn-success" ng-click="addCat()">Aggiungi categoria</button>		
+<ul class="nav nav-tabs noprint" style="padding-top: 5px;padding-bottom: 5px;">
 	<li ng-repeat="c in entity.Categories" ng-class="{'active':c.Alias === entity.Categories[0].Alias}"><a data-toggle="tab" href="#{{ c.Alias }}">{{ c.Name }}</a>
+	
 </ul>
 
 <div class="tab-content">
@@ -121,20 +123,44 @@
 			<label for="Name">Alias:</label>
 			<input type="text" class="form-control" id="Website" ng-model="c.Alias">
 		</div>
-
+			<div class="panel panel-default">
+			  <div class="panel-heading">Tariffe</div>
+			  <div class="panel-body">
+						<div class="input-group" ng-repeat="t in c.Prices" style="padding-top: 5px;padding-bottom: 5px;"><input type="text" class="form-control" ng-model="t.Value">
+						<span class="input-group-btn">
+						<button class="btn btn-danger" ng-click="removePr($index)">Rimuovi</button>
+						</span></div><button class="btn btn-success" ng-click="addTr()" style="padding-top: 5px;padding-bottom: 5px;">Aggiungi</button>				  
+			  </div>
+			</div>
 		</div>
 	</div>	
 		<table class="table table-bordered table-responsive">
 			<thead>
 				<tr>
-					<th></th>
-					<th>Nome</th>
+					<th width="10%"><button class="btn btn-success" ng-click="addEntity()" style="padding-top: 5px;padding-bottom: 5px;">Aggiungi</button>	</th>
+					<th width="30%">Nome</th>
+					<th width="40%">Ingredienti</th>
+					<th width="20%">Prezzo</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr ng-repeat="p in c.Entities">
-					<td><button  ng-repeat="pr in p.Prices" class="btn btn-success" ng-click="addItem(p,pr)"><i class="fa fa-cart-plus" aria-hidden="true"></i> {{c.Prices[$index].Value }} {{pr.Value|currency}}</button></td>
-					<td><b>{{ p.Name }}</b><p><small><span ng-repeat="i in p.Items">{{ i.Value }}, </span></small></p></td>
+					<td width="10%"><button class="btn btn-danger" ng-click="DelEntity()" style="padding-bottom: 5px;">Rimuovi</button></td>
+					<td width="30%"><input type="text" class="form-control" ng-model="p.Name"></td>
+					<td width="40%">
+						<div class="input-group" ng-repeat="i in p.Items" style="padding-bottom: 5px;"><input type="text" class="form-control" ng-model="i.Value">
+						<span class="input-group-btn">
+						<button class="btn btn-danger" ng-click="removeItem($index)">Rimuovi</button>
+						</span></div><button class="btn btn-success" ng-click="addItem()" style="padding-bottom: 5px;">Aggiungi</button>
+					</td>
+					<td width="20%">
+						<div class="input-group" ng-repeat="pr in p.Prices" style="padding-bottom: 5px;"><input type="text" class="form-control" ng-model="pr.Value">
+						<span class="input-group-btn">
+						<button class="btn btn-danger" ng-click="removePr($index)">Rimuovi</button>
+						</span></div><button class="btn btn-success" ng-click="addPr()" style="padding-top: 5px;padding-bottom: 5px;">Aggiungi</button>					
+					</td>
+					<!--<td><button  ng-repeat="pr in p.Prices" class="btn btn-success" ng-click="addItem(p,pr)"><i class="fa fa-cart-plus" aria-hidden="true"></i> {{c.Prices[$index].Value }} {{pr.Value|currency}}</button></td>
+					<td><b>{{ p.Name }}</b><p><small><span ng-repeat="i in p.Items">{{ i.Value }}, </span></small></p></td>-->
 				</tr>
 			</tbody>    
 		</table>
