--- a/index.html
+++ b/index.html
@@ -106,7 +106,6 @@
 <button class="btn btn-success" ng-click="addCat()">Aggiungi categoria</button>		
 <ul class="nav nav-tabs noprint" style="padding-top: 5px;padding-bottom: 5px;">
 	<li ng-repeat="c in entity.Categories" ng-class="{'active':c.Alias === entity.Categories[0].Alias}"><a data-toggle="tab" href="#{{ c.Alias }}">{{ c.Name }}</a>
-	
 </ul>
 
 <div class="tab-content">
@@ -123,13 +122,14 @@
 			<label for="Name">Alias:</label>
 			<input type="text" class="form-control" id="Website" ng-model="c.Alias">
 		</div>
-			<div class="panel panel-default">
-			  <div class="panel-heading">Tariffe</div>
+		<button class="btn btn-danger" ng-click="removeCat($index)">Rimuovi categoria</button>
+			<div class="panel panel-default" >
+			  <div class="panel-heading" >Tariffe</div>
 			  <div class="panel-body">
 						<div class="input-group" ng-repeat="t in c.Prices" style="padding-top: 5px;padding-bottom: 5px;"><input type="text" class="form-control" ng-model="t.Value">
 						<span class="input-group-btn">
-						<button class="btn btn-danger" ng-click="removePr($index)">Rimuovi</button>
-						</span></div><button class="btn btn-success" ng-click="addTr()" style="padding-top: 5px;padding-bottom: 5px;">Aggiungi</button>				  
+						<button class="btn btn-danger" ng-click="removeTr(c.Prices,$index)">Rimuovi</button>
+						</span></div><button class="btn btn-success" ng-click="addTr(c.Prices)" style="padding-top: 5px;padding-bottom: 5px;">Aggiungi</button>				  
 			  </div>
 			</div>
 		</div>
@@ -137,27 +137,30 @@
 		<table class="table table-bordered table-responsive">
 			<thead>
 				<tr>
-					<th width="10%"><button class="btn btn-success" ng-click="addEntity()" style="padding-top: 5px;padding-bottom: 5px;">Aggiungi</button>	</th>
+					<th width="10%"><button class="btn btn-success" ng-click="addEt(c.Entities)" style="padding-top: 5px;padding-bottom: 5px;">Aggiungi</button>	</th>
 					<th width="30%">Nome</th>
-					<th width="40%">Ingredienti</th>
-					<th width="20%">Prezzo</th>
+					<th width="30%">Ingredienti</th>
+					<th width="30%">Prezzo</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr ng-repeat="p in c.Entities">
-					<td width="10%"><button class="btn btn-danger" ng-click="DelEntity()" style="padding-bottom: 5px;">Rimuovi</button></td>
+					<td width="10%"><button class="btn btn-danger" ng-click="removeEt(c.Entities,$index)" style="padding-bottom: 5px;">Rimuovi</button></td>
 					<td width="30%"><input type="text" class="form-control" ng-model="p.Name"></td>
-					<td width="40%">
+					<td width="30%">
 						<div class="input-group" ng-repeat="i in p.Items" style="padding-bottom: 5px;"><input type="text" class="form-control" ng-model="i.Value">
 						<span class="input-group-btn">
-						<button class="btn btn-danger" ng-click="removeItem($index)">Rimuovi</button>
-						</span></div><button class="btn btn-success" ng-click="addItem()" style="padding-bottom: 5px;">Aggiungi</button>
+						<button class="btn btn-danger" ng-click="removeIt(p.Items,$index)">Rimuovi</button>
+						</span></div><button class="btn btn-success" ng-click="addIt(p.Items)" style="padding-bottom: 5px;">Aggiungi</button>
 					</td>
-					<td width="20%">
-						<div class="input-group" ng-repeat="pr in p.Prices" style="padding-bottom: 5px;"><input type="text" class="form-control" ng-model="pr.Value">
+					<td width="30%">
+						<div class="form-group" ng-repeat="pr in p.Prices">
+						<label for="Name">{{c.Prices[$index].Value}}</label>
+						<div class="input-group"  style="padding-bottom: 5px;"><input type="text" class="form-control" ng-model="pr.Value">
 						<span class="input-group-btn">
-						<button class="btn btn-danger" ng-click="removePr($index)">Rimuovi</button>
-						</span></div><button class="btn btn-success" ng-click="addPr()" style="padding-top: 5px;padding-bottom: 5px;">Aggiungi</button>					
+						<button class="btn btn-danger" ng-click="removePr(p.Prices,$index)">Rimuovi</button>
+						</span></div></div>
+						<button class="btn btn-success" ng-click="addPr(p.Prices)" style="padding-top: 5px;padding-bottom: 5px;">Aggiungi</button>					
 					</td>
 					<!--<td><button  ng-repeat="pr in p.Prices" class="btn btn-success" ng-click="addItem(p,pr)"><i class="fa fa-cart-plus" aria-hidden="true"></i> {{c.Prices[$index].Value }} {{pr.Value|currency}}</button></td>
 					<td><b>{{ p.Name }}</b><p><small><span ng-repeat="i in p.Items">{{ i.Value }}, </span></small></p></td>-->
