--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
 	  <input type="text" class="form-control" id="Name" ng-model="entity.Name">
 	</div>  
 	<div class="form-group">
+	  <label for="Alias">Alias:</label>
+	  <input type="text" class="form-control" id="Alias" ng-model="entity.Alias">
+	</div>  	
+	<div class="form-group">
 	  <label for="Address">Indirizzo:</label>
 	  <input type="text" class="form-control" id="Address" ng-model="entity.Address">
 	</div>
